Fix question layout on small screens

--- a/app/assets/stylesheets/beta/index.scss
+++ b/app/assets/stylesheets/beta/index.scss
@@ -524,7 +524,7 @@ body.beta {
             form {
                 input {
                     &:nth-child(even) {
-                        margin-left: 0px;
+                        margin-left: 0px !important;
                     }
                 }
             }
